--- a/client/src/styles/GameLobby.css
+++ b/client/src/styles/GameLobby.css
@@ -1,6 +1,7 @@
 .game-lobby {
     position: relative;
     margin: 3rem auto 0;
+    padding: 3px;
     opacity: 0;
     transform: translateY(3rem);
     width: clamp(300px, 50vw, 500px);
@@ -8,9 +9,6 @@
     box-shadow: var(--shadow-1);
     border-radius: 10px;
     background-color: white;
-
-    display: flex;
-    flex-direction: column;
 }
 .lobby-header {
     text-align: center;
@@ -18,9 +16,27 @@
     transform: translateY(3rem);
 }
 .game-lobby .challenge {
-    background-color: blue;
+    background-image: linear-gradient(
+        135deg,
+        var(--clr-brown-1),
+        var(--clr-brown-2)
+    );
     font-size: 0.8em;
+    margin: 3px;
+    padding: 5px;
+    border-radius: 3px;
 
     display: flex;
     flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+}
+.game-lobby .challenge button {
+    background: transparent;
+    font-size: 1em;
+    color: white;
+    padding: 5px;
+    border: none;
+    outline: none;
+    cursor: pointer;
 }
